Create User Entity

--- a/src/Banco-Railaite.API/Banco-Railaite.csproj
+++ b/src/Banco-Railaite.API/Banco-Railaite.csproj
@@ -9,7 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Domain\Interfaces\" />
+    <Folder Include="Domain\DTO\" />
   </ItemGroup>
 
 </Project>
